--- a/.github/workflows/mirror.yaml
+++ b/.github/workflows/mirror.yaml
@@ -30,5 +30,6 @@ jobs:
         # All repos must manually be created on GitHub: https://github.com/new
         repo:
           - AndroidAPS
+          - autosurfer
           - nixos
 
